--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/logo.png">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Momentum - AI-Powered Time Management</title>
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self' https://*.googleapis.com https://*.gstatic.com https://*.firebaseapp.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.googleapis.com https://*.gstatic.com https://apis.google.com https://www.gstatic.com https://kit.fontawesome.com;
+      style-src 'self' 'unsafe-inline' https://*.googleapis.com https://fonts.googleapis.com https://kit-free.fontawesome.com;
+      font-src 'self' data: https://fonts.gstatic.com https://kit-free.fontawesome.com;
+      img-src 'self' data: https://*.googleapis.com https://*.gstatic.com;
+      frame-src 'self' https://*.firebaseapp.com https://*.googleapis.com https://*.gstatic.com https://accounts.google.com;
+      connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://identitytoolkit.googleapis.com https://*.gstatic.com http://localhost:5000 https://securetoken.googleapis.com https://kit.fontawesome.com https://ka-f.fontawesome.com;
+    ">
+    <title>Momentum</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
