--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' https://*.googleapis.com https://*.gstatic.com https://*.firebaseapp.com;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.googleapis.com https://*.gstatic.com https://apis.google.com https://www.gstatic.com https://kit.fontawesome.com;
-      style-src 'self' 'unsafe-inline' https://*.googleapis.com https://fonts.googleapis.com https://kit-free.fontawesome.com;
-      font-src 'self' data: https://fonts.gstatic.com https://kit-free.fontawesome.com;
-      img-src 'self' data: https://*.googleapis.com https://*.gstatic.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' https://*.googleapis.com https://*.gstatic.com https://apis.google.com https://www.gstatic.com https://kit.fontawesome.com https://ka-f.fontawesome.com chrome-extension://* https://accounts.google.com;
+      style-src 'self' 'unsafe-inline' https://*.googleapis.com https://fonts.googleapis.com https://kit-free.fontawesome.com https://cdnjs.cloudflare.com;
+      font-src 'self' data: https://fonts.gstatic.com https://kit-free.fontawesome.com https://cdnjs.cloudflare.com;
+      img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://lh3.googleusercontent.com;
       frame-src 'self' https://*.firebaseapp.com https://*.googleapis.com https://*.gstatic.com https://accounts.google.com;
-      connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://identitytoolkit.googleapis.com https://*.gstatic.com http://localhost:5000 https://securetoken.googleapis.com https://kit.fontawesome.com https://ka-f.fontawesome.com;
+      connect-src 'self' http://localhost:5000 https://*.googleapis.com https://*.firebaseapp.com https://identitytoolkit.googleapis.com https://*.gstatic.com https://securetoken.googleapis.com https://kit.fontawesome.com https://ka-f.fontawesome.com;
+      object-src 'none';
+      base-uri 'self';
+      form-action 'self';
+      upgrade-insecure-requests;
     ">
     <title>Momentum</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div id="app"></div>
